--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_install:
 - PYTHON=`which python` mininet/util/install.sh -n
 
 install:
-- sudo pip install . click
+- sudo -H pip install . click
 
 script:
 - sudo python fpga_switch_model.py
