--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ install:
 
 script:
 - sudo python fpga_switch_model.py
-- python -m unittest discover -p 'test*.py'
+- pwd; python -m unittest discover -p 'test*.py'
 
 notifications:
   email:
